--- a/try/index.html
+++ b/try/index.html
@@ -1,158 +1,12 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./styles/style.css" />
-        <title>Document</title>
+        <title>Try</title>
     </head>
     <body>
-        <section id="container">
-            <button type="button" id="btn">I am a div</button>
-        </section>
         <script type="module" src="./src/init.js"></script>
-    </body>
-</html> -->
-
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <title>So Many Numbers</title>
-        <style>
-            .centered {
-                position: fixed;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-                text-align: center;
-            }
-        </style>
-    </head>
-    <body>
-        <main id="user-interface" class="centered">
-            <button id="greater-than">how many greater than X</button>
-            <br />
-            <button id="less-than">how many less than X</button> <br />
-            <button id="divisible-by">how many divisible by X</button>
-            <br />
-            <br />
-            <button id="display">display numbers</button> <br />
-            <button id="reset">reset numbers</button>
-        </main>
-        <script id="data">
-            let numbers = [0, 1, 2, 3, 4];
-        </script>
-        <script id="handlers">
-            'use strict';
-            /* Study the demo for this exercise then fill in the blanks
-              the goal is to exactly recreate the behavior of the demo
-              hint: use ctr-f to find all of the blanks _
-            */
-            // 1. A user can see all numbers listed in an alert
-            const displayNumbersHandler = (
-                arrayOfNumbers = numbers,
-                message = 'all numbers: ',
-            ) => {
-                debugger;
-                const joinNumbers = (acc, next) => `${acc}\n${next}`;
-                const allNumbersListed = arrayOfNumbers.reduce(joinNumbers, '');
-                alert(`${message}: ${allNumbersListed}`);
-            };
-            // 2. A user can fill the array with as many numbers as they like
-            //  (beginning with zero, ending with userNumber - 1)
-            const resetNumbersHandler = () => {
-                debugger;
-                const userInput = prompt('how many numbers would you like?');
-                if (!userInput) {
-                    return;
-                }
-                const userNumber = Number(userInput);
-                if (isNaN(userNumber)) {
-                    alert(`${userNumber} is not a valid number`);
-                    return;
-                }
-                // a basic for loop, not for ... of
-                numbers = [];
-                for (let num = 0; num < userNumber; num++) {
-                    numbers.push(num);
-                }
-                displayNumbersHandler(); // no arguments! this is correct like it is
-            };
-            // 3. A user can see a list of all numbers greater than their input
-            const greaterThanHandler = () => {
-                debugger;
-                const userInput = prompt('find all numbers greater than:');
-                if (!userInput) {
-                    return;
-                }
-                const userNumber = Number(userInput);
-                if (isNaN(userNumber)) {
-                    alert(`${userNumber} is not a valid number`);
-                    return;
-                }
-                const numbersGreaterThan = numbers.slice(userNumber + 1);
-                const howMany = numbersGreaterThan.length;
-                const newMessage = `there are ${howMany} numbers greater than ${userNumber} `;
-                displayNumbersHandler(numbersGreaterThan, newMessage);
-            };
-            // 4. A user can see a list of all numbers less than their input
-            const lessThanHandler = () => {
-                debugger;
-                const userInput = prompt('find all numbers less than:');
-                if (!userInput) {
-                    return;
-                }
-                const userNumber = Number(userInput);
-                if (isNaN(userNumber)) {
-                    alert(`${userNumber} is not a valid number`);
-                    return;
-                }
-                const numbersLessThan = numbers.slice(0, -userNumber + 1);
-                const howMany = numbersLessThan.length;
-                const newMessage = `there are ${howMany} numbers less than ${userNumber} `;
-                displayNumbersHandler(numbersLessThan, newMessage);
-            };
-            // 5. A user can see a list of all numbers divisible by their input
-            const divisibleByHandler = () => {
-                debugger;
-                const userInput = prompt('find all numbers divisible by:');
-                if (!userInput) {
-                    return;
-                }
-                const userNumber = Number(userInput);
-                if (isNaN(userNumber)) {
-                    alert(`${userNumber} is not a valid number`);
-                    return;
-                }
-                const numbersDivisible = numbers.filter(
-                    (num) => num % userNumber,
-                );
-                const howMany = numbersDivisible.length;
-                const newMessage = `there are ${howMany} numbers divisible by ${userNumber}: `;
-                displayNumbersHandler(numbersDivisible, newMessage);
-            };
-        </script>
-        <script id="listeners">
-            debugger; // main entry point
-            // this code works!
-            document
-                .getElementById('greater-than')
-                .addEventListener('click', greaterThanHandler);
-            document
-                .getElementById('less-than')
-                .addEventListener('click', lessThanHandler);
-            document
-                .getElementById('divisible-by')
-                .addEventListener('click', divisibleByHandler);
-            document
-                .getElementById('display')
-                .addEventListener('click', (e, arrayOfNumbers, message) => {
-                    displayNumbersHandler(arrayOfNumbers, message);
-                });
-            document
-                .getElementById('reset')
-                .addEventListener('click', resetNumbersHandler);
-        </script>
     </body>
 </html>
