--- a/5-testing-components/exercises-write-components/game-board/game-board.test.html
+++ b/5-testing-components/exercises-write-components/game-board/game-board.test.html
@@ -9,7 +9,7 @@
         <script type="module">
             import { showComponentTestCase } from '/lib/show-component-test-case.js';
 
-            import { gameBoard } from './game-board.js';
+            import gameBoard from './game-board.js';
 
             showComponentTestCase(
                 'tictactoe: X won on the middle column',
