--- a/5-testing-components/exercises-write-components/info/info.test.html
+++ b/5-testing-components/exercises-write-components/info/info.test.html
@@ -9,7 +9,7 @@
         <script type="module">
             import { showComponentTestCase } from '/lib/show-component-test-case.js';
 
-            import { info } from './info.js';
+            import info from './info.js';
 
             showComponentTestCase(
                 'several colors, no id',
