--- a/5-testing-components/exercises-write-components/paragraph/paragraph.test.html
+++ b/5-testing-components/exercises-write-components/paragraph/paragraph.test.html
@@ -11,7 +11,7 @@
         <script type="module">
             import { showComponentTestCase } from '/lib/show-component-test-case.js';
 
-            import { paragraph } from './paragraph.js';
+            import paragraph from './paragraph.js';
 
             showComponentTestCase(
                 '"lorem ipsum", no classes',
