--- a/5-testing-components/exercises-write-tests/classy-header/classy-header.test.html
+++ b/5-testing-components/exercises-write-tests/classy-header/classy-header.test.html
@@ -11,7 +11,7 @@
         <script type="module">
             import { showComponentTestCase } from '/lib/show-component-test-case.js';
 
-            import { classyHeader } from './classy-header.js';
+            import classyHeader from './classy-header.js';
 
             showComponentTestCase('an H3 with text: "hello", and no classes');
 
