--- a/5-testing-components/exercises-write-tests/linked-header/linked-header.test.html
+++ b/5-testing-components/exercises-write-tests/linked-header/linked-header.test.html
@@ -9,7 +9,7 @@
         <script type="module">
             import { showComponentTestCase } from '/lib/show-component-test-case.js';
 
-            import { linkedHeader } from './linked-header.js';
+            import linkedHeader from './linked-header.js';
 
             showComponentTestCase('a header linked to google');
 
