--- a/try/index.html
+++ b/try/index.html
@@ -7,6 +7,10 @@
         <title>Try</title>
     </head>
     <body>
+        <div class="test">
+            <h1>Hello</h1>
+            <p>hello</p>
+        </div>
         <script type="module" src="./src/init.js"></script>
     </body>
 </html>
