--- a/7-reverse-engineering/level-1/color-palate/index.html
+++ b/7-reverse-engineering/level-1/color-palate/index.html
@@ -8,7 +8,10 @@
     </head>
 
     <body>
-        <div id="user-interface"></div>
-        <script type="module" src="./src/init/index.js"></script>
+        <div id="user-interface" class="full-screen">
+            <input type="color" class="color-selection" id="new-color" />
+        </div>
+
+        <script type="module" src="./src/init.js"></script>
     </body>
 </html>
