--- a/6-refactoring/exercises/dom-and-events/type-caster/index.html
+++ b/6-refactoring/exercises/dom-and-events/type-caster/index.html
@@ -4,7 +4,7 @@
         <title>Type Caster</title>
         <meta charset="utf-8" />
 
-        <link href="./styles.css" rel="stylesheet" />
+        <link href="./styles/styles.css" rel="stylesheet" />
     </head>
 
     <body>
