--- a/6-refactoring/exercises/dom-and-events/mouse-coordinates/index.html
+++ b/6-refactoring/exercises/dom-and-events/mouse-coordinates/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <title>Mouse Coordinates</title>
 
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="./styles/style.css" />
     </head>
 
     <body>
