--- a/8-hack-these/0-word-length-calculator/index.html
+++ b/8-hack-these/0-word-length-calculator/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="./styles/style.css" />
         <title>Word Length Calcuator</title>
     </head>
     <body>
@@ -12,6 +12,6 @@
         <input type="text" id="str" />
         <div id="output"></div>
         <button id="btn"><h2>Click to calculate word length</h2></button>
-        <script src="app.js"></script>
+        <script type="module" src="./src/init.js"></script>
     </body>
 </html>
