--- a/8-hack-these/1-digital-clock/index.html
+++ b/8-hack-these/1-digital-clock/index.html
@@ -4,12 +4,11 @@
         <title>Challenge</title>
         <meta charset="utf-8" />
 
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="./styles/style.css" />
     </head>
 
     <body>
         <div id="MyClockDisplay" class="clock"></div>
-
-        <script src="./script.js"></script>
+        <script type="module" src="./src/init.js"></script>
     </body>
 </html>
