--- a/try/index.html
+++ b/try/index.html
@@ -7,10 +7,7 @@
         <title>Try</title>
     </head>
     <body>
-        <div class="test">
-            <h1>Hello</h1>
-            <p>hello</p>
-        </div>
+        <div id="root"></div>
         <script type="module" src="./src/init.js"></script>
     </body>
 </html>
