--- a/7-reverse-engineering/level-1/duck-duck-search/index.html
+++ b/7-reverse-engineering/level-1/duck-duck-search/index.html
@@ -4,11 +4,15 @@
         <meta charset="utf-8" />
         <title></title>
 
-        <link rel="stylesheet" href="./public/style.css" />
+        <link rel="stylesheet" href="./styles/style.css" />
     </head>
 
     <body>
-        <div id="user-interface"></div>
-        <script type="module" src="./src/init/index.js"></script>
+        <section id="user-interface" class="centered">
+            <input type="search" id="query" class="input-field" />
+            <button type="button" id="search-button">DuckDuckSearch</button>
+        </section>
+
+        <script type="module" src="./src/init.js"></script>
     </body>
 </html>
