--- a/6-refactoring/exercises/state/search-foods/index.html
+++ b/6-refactoring/exercises/state/search-foods/index.html
@@ -4,7 +4,7 @@
         <title>search entries</title>
         <meta charset="utf-8" />
 
-        <link href="./style.css" rel="stylesheet" />
+        <link href="./styles/style.css" rel="stylesheet" />
     </head>
 
     <body>
