--- a/7-reverse-engineering/level-2/hex-setter/index.html
+++ b/7-reverse-engineering/level-2/hex-setter/index.html
@@ -4,11 +4,19 @@
         <meta charset="utf-8" />
         <title></title>
 
-        <link rel="stylesheet" href="./public/style.css" />
+        <link rel="stylesheet" href="./styles/style.css" />
     </head>
 
     <body>
-        <div id="user-interface"></div>
-        <script type="module" src="./src/init/index.js"></script>
+        <section id="user-interface" class="inputs">
+            <form id="hex-value">
+                <h2>Select a hex code:</h2>
+                <div id="container">
+                    <code>#</code>
+                </div>
+            </form>
+            <code id="new-style" class="output"></code>
+        </section>
+        <script type="module" src="./src/init.js"></script>
     </body>
 </html>
