--- a/8-hack-these/1-number-guessing-game/index.html
+++ b/8-hack-these/1-number-guessing-game/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="./styles/style.css" />
     </head>
-
     <body>
         <div class="output">
             <div class="message"></div>
             <input type="number" />
             <button>Guess</button>
         </div>
-        <script src="./script.js"></script>
+        <script type="module" src="./src/init.js"></script>
     </body>
 </html>
