--- a/try/index.html
+++ b/try/index.html
@@ -7,7 +7,8 @@
         <title>Try</title>
     </head>
     <body>
-        <div id="root"></div>
+        <button id="btn">Click me</button>
+        <div id="output"></div>
         <script type="module" src="./src/init.js"></script>
     </body>
 </html>
