--- a/8-hack-these/2-coin-toss-game/index.html
+++ b/8-hack-these/2-coin-toss-game/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="./styles/style.css" />
         <title>Coin Toss Game</title>
     </head>
     <body>
@@ -33,6 +33,6 @@
                 <button id="tails">Tails</button>
             </div>
         </div>
-        <script src="app.js"></script>
+        <script type="module" src="./src/init.js"></script>
     </body>
 </html>
